adguard-np-fix.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: adguard-home
  namespace: networking
spec:
  podSelector:
    matchLabels:
      app: adguard-home
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
  egress:
    - {}
